--- a/components.html
+++ b/components.html
@@ -29,7 +29,7 @@
             <div class="row">
               <div class="col-3">
                 <div class="button">
-                  <a class="button" href="#">Contact Us</a>
+                  <a href="#">Contact us</a>
                 </div>
               </div>
             </div>
